syntax = "proto3";
package my_custom_service.admin;

// The admin RPC service declaration, where the service name must ALWAYS be admin
service Admin {
  rpc GetStuff(AdminRequest) returns (AdminResponse);
  rpc UpdateStuff(AdminRequest) returns (AdminResponse);
  rpc UpdatePartOfStuff(AdminRequest) returns (AdminResponse);
  rpc DeleteStuff(AdminRequest) returns (AdminResponse);
  rpc CreateStuff(AdminRequest) returns (AdminResponse);
}
// The admin request message declaration
message AdminRequest {
  // The stringified params of the request
  string params = 1;
  // The stringified headers of the request
  string headers = 2;
  // The stringified context, which is filled by conduit data, of the request
  string context = 3;
}
// The admin responce message declaration
message AdminResponse {
  // The stringified result of the service
  string result = 1;
}
